# sky-quest

./: Cargo.toml  README.md
src/: main.rs  prelude.rs
src/game/: gameplay.rs  load.rs  mod.rs  physics.rs  sound.rs  text.rs
src/menu/: menu.rs  mod.rs  splash.rs
src/player/: player.rs
